hotrod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: hotrod
  name: hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hotrod
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/jaeger-example: "true"
        io.kompose.service: hotrod
    spec:
      containers:
        - args:
            - all
          image: jaegertracing/example-hotrod:latest
          name: hotrod
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
