jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/jaeger-example: "true"
        io.kompose.service: jaeger
    spec:
      containers:
        - image: jaegertracing/all-in-one:latest
          name: jaeger
          ports:
            - containerPort: 6831
              protocol: UDP
            - containerPort: 16686
          resources: {}
      restartPolicy: Always
status: {}
